# pipenv-poetry-migrate

./: .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  python-package.yml  release.yml  snyk.yml  test.yml
pipenv_poetry_migrate/: __init__.py  cli.py  loader.py  migrate.py  translator.py
scripts/: clean.sh  format.sh  lint.sh  release.sh  test.sh
tests/: conftest.py  test_cli.py  test_loader.py  test_migrate.py  test_pipenv_poetry_migrate.py  test_translator.py
tests/toml/: Pipfile  broken.toml  expect_pyproject.toml  expect_pyproject_with_default_option.toml  expect_pyproject_with_no_use_group_notation.toml  expect_pyproject_with_re_migrate.toml  expect_pyproject_with_use_group_notation.toml  poetry12_pyproject.toml  pyproject.toml
