[tool.poetry]
name = "pipenv-poetry-migrate"
version = "0.5.0"
description = "simple migration script, migrate pipenv to poetry"
authors = ["Yoshiyuki HINO <yhinoz@gmail.com>"]
license = "Apache-2.0"
repository = 'https://github.com/yhino/pipenv-poetry-migrate'
homepage = 'https://github.com/yhino/pipenv-poetry-migrate'
readme = 'README.md'

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
tomlkit = "^0.11.8"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
mypy = "^1.4.1"
python-semantic-release = "^7.15.3"
types-setuptools = "^68.0.0.1"
ruff = "^0.0.272"

[tool.poetry.scripts]
pipenv-poetry-migrate = "pipenv_poetry_migrate.cli:app"

[tool.isort]
py_version = 38
profile = "black"
src_paths = ["pipenv_poetry_migrate", "tests"]

[tool.ruff]
target-version = "py38"
select = ["ALL"]
ignore = [
    "D",        # temporary
    "ANN",      # handled by mypy
    "E501",     # line too long, handled by black
    "B008",     # do not perform function calls in argument defaults
]
src = ["pipenv_poetry_migrate", "tests"]

[tool.ruff.per-file-ignores]
"pipenv_poetry_migrate/cli.py" = ["FBT"]
"tests/*" = ["D", "S", "PLC1901"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = 3.8
strict = true
ignore_missing_imports = true

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
commit_parser = "semantic_release.history.emoji_parser"
major_emoji = ":boom:"
minor_emoji = ":sparkles:,:children_crossing:,:lipstick:,:iphone:,:egg:,:chart_with_upwards_trend:"
patch_emoji = ":ambulance:,:lock:,:arrow_up:,:bug:,:zap:,:goal_net:,:alien:,:wheelchair:,:speech_balloon:,:mag:,:apple:,:penguin:,:checkered_flag:,:robot:,:green_apple:"
build_command = "poetry build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
